Fixed broken styles in tablet viewport

--- a/app/assets/stylesheets/framework/ci_variable_list.scss
+++ b/app/assets/stylesheets/framework/ci_variable_list.scss
@@ -32,7 +32,7 @@
   align-items: flex-start;
   position: relative;
 
-  @include media-breakpoint-down(xs) {
+  @include media-breakpoint-down(sm) {
     align-items: flex-end;
     border: 0;
   }
@@ -78,7 +78,7 @@
   &:not(:last-child) {
     padding-right: $gl-btn-padding;
 
-    @include media-breakpoint-down(xs) {
+    @include media-breakpoint-down(sm) {
       border: 0;
       min-height: unset;
     }
@@ -126,7 +126,7 @@
 }
 
 .ci-variable-environment-dropdown-wrapper + .ci-variable-row-remove-button {
-  @include media-breakpoint-down(xs) {
+  @include media-breakpoint-down(sm) {
     position: absolute;
     border: 0;
     right: $gl-padding * -2;
